Updated jquery dependency, using local file instead of external link

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
     <script src="codemirror/addon/search/search.js"></script>
 
     <!-- Accessibility -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="scripts/jquery-3.4.1.min.js"></script>
 
 
     <link rel="stylesheet" href="resources/sheets/accessible-nav-menu.css">
