Create navigation bar

--- a/www/new_words.html
+++ b/www/new_words.html
@@ -213,10 +213,15 @@
     }
 
     </style>
+    <link rel="stylesheet" type="text/css" href="styles/nav_bar.css">
 
   </head>
   <body onload="newWordsInitialize()">
     <div id="main-container">
+      <div class="topnav">
+	  <a href="new_words.html" class="active">Listi yfir ný orð</a>
+          <a href="index.html">XML ritill</a>
+      </div>
       <div id="selection-container">
         <div id="period-search-container">
           <h3>
